--- a/wiki/ConvertingTypes.wiki
+++ b/wiki/ConvertingTypes.wiki
@@ -1,7 +1,9 @@
 #summary Converting between JS and native types
 #labels Phase-UserDocs
 
-= Introduction =
+<wiki:toc max_depth="3" />
+
+= An introduction to the `v8::juice::convert` API =
 
 Juice comes with an API for casting between JS types and native types. While v8 of course provides convenience routines like `Value::IntegerValue()` and `Value::ToString()`, that leaves us with two limitations:
 
@@ -14,9 +16,12 @@ And thus...
 #include <v8/juice/convert.h>
 
 ...
-namespace cv = v8::juice::convert;
+namespace cv = ::v8::juice::convert;
+using namespace v8;
+
 int i = cv::CastFromJS<int>(someJSVal);
 std::string s = cv::CastFromJS<std::string>(someJSVal);
+double d = cv::CastFromJS<double>(someJSVal);
 ...
 
 Handle<Value> v1 = cv::CastToJS( myInteger );
@@ -26,7 +31,9 @@ Handle<Value> v3 = cv::CastToJS( myType ); // we can add custom conversions!
 
 The `CastToJS()` and `CastFromJS()` routines are very small functions which delegate all work to template a specialization of the class `NativeToJS<>` resp. `JSToNative<>`. Specializations are already installed for all of the base POD types (except (`char const *`) - see below), and clients can provide their own to do any conversion they like. An example of this is shown on [CreatingJSClasses the creating-new-classes page].
 
-==The `(char const *)` problem==
+TODO: there's much more to document here, but it's late and i'm tired. And i'd rather be coding, except that i'm so tired.
+
+=The `(char const *)` problem=
 
 The following will work as expected:
 
@@ -40,4 +47,12 @@ This won't:
 char const * v = CastFromJS(myJSVal);
 }}}
 
-The problem here is ownership and lifetime of the string bytes. v8 does not document them (and can't realistically provide any requirements which we would need for this conversion). While we _can_ write a conversion routine for this, its results would technically be undefined. As a workaround, client code should use `std::string` instead, at least for `CastFromJS()` or implement specializations for their string type of choice.
+The problem here is ownership and lifetime of the string bytes. v8 does not document them (and can't realistically provide any requirements which we would need for this conversion). We _can_ write a conversion routine for this, and it would probably work 99% of the time, but its results would technically be undefined. As a workaround, client code should use `std::string` instead (at least for `CastFromJS()`) or implement `JSToNative<>` and/or `NativeToJS<>` specializations for their string type of choice. The `CastToJS()` function is overloaded for (`char const *`) and "does the right thing", but `CastFromJS()` cannot handle such strings as transparently as it can most other types.
+
+For those averse to template arguments, there are a number of convenience instantiations of the `NativeToJS` template which can be used like this:
+
+{{{
+  int32_t i = JSToInt32(...);
+  std::string s( JSToStdString(...) );
+  bool b = JSToBool(...);
+}}}
