--- a/wiki/ConvertingTypes.wiki
+++ b/wiki/ConvertingTypes.wiki
@@ -31,6 +31,9 @@ Handle<Value> v3 = cv::CastToJS( myType ); // we can add custom conversions!
 
 The `CastToJS()` and `CastFromJS()` routines are very small functions which delegate all work to template a specialization of the class `NativeToJS<>` resp. `JSToNative<>`. Specializations are already installed for all of the base POD types (except (`char const *`) - see below), and clients can provide their own to do any conversion they like. An example of this is shown on [CreatingJSClasses the creating-new-classes page].
 
+= Adding custom JS-to-native conversions=
+= Adding custom native-to-JS conversions=
+
 TODO: there's much more to document here, but it's late and i'm tired. And i'd rather be coding, except that i'm so tired.
 
 =The `(char const *)` problem=
