--- a/wiki/ConvertingTypes.wiki
+++ b/wiki/ConvertingTypes.wiki
@@ -8,9 +8,9 @@
 Juice comes with an API for casting between JS types and native types. While v8 of course provides convenience routines like `Value::IntegerValue()` and `Value::ToString()`, that leaves us with two limitations:
 
   * The types of conversions are defined by v8's implementors and are not extensible.
-  * We have to know the exact conversion routine we want to call. Believe it or not, when our code uses typedefs (e.g. numeric types of different sizes, possibly from external libraries) we cannot safely know which conversion to rely upon.
+  * We have to know the exact conversion routine we want to call. Believe it or not, when our code uses typedefs (e.g. numeric types of unspecified sizes, possibly from external libraries) we cannot safely know which conversion to rely upon.
 
-And thus...
+And thus we let C++ templates decide it for us...
 
 {{{
 #include <v8/juice/convert.h>
@@ -29,9 +29,27 @@ Handle<Value> v2 = cv::CastToJS( "hi, world" );
 Handle<Value> v3 = cv::CastToJS( myType ); // we can add custom conversions!
 }}}
 
-The `CastToJS()` and `CastFromJS()` routines are very small functions which delegate all work to template a specialization of the class `NativeToJS<>` resp. `JSToNative<>`. Specializations are already installed for all of the base POD types (except (`char const *`) - see below), and clients can provide their own to do any conversion they like. An example of this is shown on [CreatingJSClasses the creating-new-classes page].
 
-= Adding custom JS-to-native conversions=
+The `CastToJS()` and `CastFromJS()` routines are very small functions which
+delegate all work to template a specialization of the class `NativeToJS<>`
+resp. `JSToNative<>`. Specializations are already installed for all of the
+base POD types (except (`char const *`) - see below), and clients can provide
+their own to do any conversion they like. An example of this is shown on
+[CreatingJSClasses the creating-new-classes page].
+
+=Achtung: not for noobs=
+
+Forewarning: customizing the type conversions requires a fair amount of
+knowledge in how to use and abuse C++ templates. DO NOT just blindly
+copy/paste some example from this page without understanding what it does and
+how it gets triggered. One tiny little typing mistake can lead to literally
+hundreds of lines of compiler error messages (or weird link errors), and it
+often takes patience and experience to be able to decypher such problems
+("dammit, it's a pointer, not a reference").
+
+Good luck!
+
+=Adding custom native-to-JS conversions=
 
 To make our own types support work with `CastToJS()` we have to provide
 template specialization for `NativeToJS<>`, as shown below.
@@ -44,7 +62,7 @@ struct NativeToJS<MyType>
     Handle<Value> operator()( MyType const * n ) const
     {
         // This impl works together with WeakJSClassCreator():
-        return ::v8::juice::WeakJSClassCreator<MyType>::GetObject( n );
+        return ::v8::juice::WeakJSClassCreator<MyType>::GetJSObject( n );
     }
 };
 } } } // namespaces
@@ -57,7 +75,8 @@ the compiler will try to pick up another instantiation of the template. With luc
 it will fail loudly, but (and this depends on `MyType`) it may pick up a different,
 inappropriate converter.
 
-= Adding custom native-to-JS conversions=
+
+=Adding custom JS-to-native conversions=
 
 The converse of `NativeToJS<>` is of course `JSToNative<>`:
 
@@ -66,20 +85,21 @@ namespace v8 { namespace juice { namespace convert {
 template <>
 struct JSToNative<MyType>
 {
-       typedef MyType * result_type;
-         result_type operator()( Handle<Value> const & h ) const
-         {
-            // This impl works together with WeakJSClassCreator():
-            return ::v8::juice::WeakJSClassCreator<MyType>::GetNative( h );
-         }
-        // This overload is an evolutionary artefact and will likely be removed from the API at some point:
-         result_type operator()( ::v8::juice::bind::BindKeyType, Handle<Value> const & jv ) const
-         {
-             return this->operator()( h );
-         }
+    typedef MyType * result_type;
+    result_type operator()( Handle<Value> const & h ) const
+    {
+       // This impl works together with WeakJSClassCreator():
+       return ::v8::juice::WeakJSClassCreator<MyType>::GetNative( h );
+    }
+    // This overload is an evolutionary artefact and will likely be removed from the API at some point:
+    result_type operator()( ::v8::juice::bind::BindKeyType, Handle<Value> const & jv ) const
+    {
+        return this->operator()( h );
+    }
 };
 } } } // namespaces
 }}}
+
 
 
 =The `(char const *)` problem=
